Test Sandbox Project/src/objects/Spike_Ticket_Notification_Scenerio__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_1__c</fullName>
        <label>Category 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Category 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_3__c</fullName>
        <label>Category 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Last Hour Same Day</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Same Hour Previous Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Spike Ticket Notification Scenerio</label>
    <pluralLabel>Spike Ticket Notification Scenerios</pluralLabel>
</CustomObject>